src/sintactico/y.output
   0  $accept : programa $end

   1  programa : listaDefiniciones VOID MAIN '(' ')' '{' listaCampos listaSentencias '}'

   2  listaDefiniciones : listaDefiniciones Definicion
   3                    |

   4  Definicion : defVariable
   5             | defFuncion
   6             | defStruct

   7  listaCampos : listaCampos campos
   8              |

   9  campos : defVariable
  10         | defStruct

  11  defStruct : STRUCT '{' listaDefVariables '}' ID ';'

  12  listaDefVariables : listaDefVariables defVariable
  13                    |

  14  defVariable : tipo listaIds ';'

  15  defFuncion : VOID ID '(' param ')' '{' listaCampos listaSentencias '}'
  16             | tipo ID '(' param ')' '{' listaCampos listaSentencias '}'

  17  tipo : INT
  18       | DOUBLE
  19       | CHAR
  20       | tipo '[' CTE_ENTERA ']'

  21  listaExpresiones : expresion
  22                   | listaExpresiones ',' expresion

  23  expresion : '(' expresion ')'
  24            | CTE_ENTERA
  25            | CTE_CARACTER
  26            | CTE_REAL
  27            | ID
  28            | '(' tipo ')' expresion
  29            | expresion '[' expresion ']'
  30            | expresion '.' ID
  31            | ID '(' argumentos ')'
  32            | operacion

  33  operacion : expresion '+' expresion
  34            | expresion '*' expresion
  35            | expresion '-' expresion
  36            | expresion '/' expresion
  37            | expresion '%' expresion
  38            | expresion '>' expresion
  39            | expresion MAYORIGUAL expresion
  40            | expresion IGUAL expresion
  41            | expresion DISTINTO expresion
  42            | expresion '<' expresion
  43            | expresion MENORIGUAL expresion
  44            | expresion AND expresion
  45            | expresion OR expresion
  46            | '!' expresion
  47            | '-' expresion

  48  argumentos :
  49             | listaExpresiones

  50  listaSentencias : listaSentencias sentencia
  51                  |

  52  sentencia : WRITE listaExpresiones ';'
  53            | READ listaExpresiones ';'
  54            | WHILE '(' expresion ')' cuerpo
  55            | IF '(' expresion ')' cuerpo
  56            | IF '(' expresion ')' cuerpo ELSE cuerpo
  57            | RETURN expresion ';'
  58            | expresion '=' expresion ';'
  59            | ID '(' argumentos ')' ';'

  60  cuerpo : '{' listaSentencias '}'
  61         | sentencia

  62  param : parametros
  63        |

  64  parametros : parametros ',' parametro
  65             | parametro

  66  parametro : tipo ID

  67  listaIds : listaIds ',' ID
  68           | ID

state 0
	$accept : . programa $end  (0)
	listaDefiniciones : .  (3)

	.  reduce 3

	programa  goto 1
	listaDefiniciones  goto 2


state 1
	$accept : programa . $end  (0)

	$end  accept


state 2
	programa : listaDefiniciones . VOID MAIN '(' ')' '{' listaCampos listaSentencias '}'  (1)
	listaDefiniciones : listaDefiniciones . Definicion  (2)

	VOID  shift 3
	INT  shift 4
	CHAR  shift 5
	DOUBLE  shift 6
	STRUCT  shift 7
	.  error

	Definicion  goto 8
	defVariable  goto 9
	defFuncion  goto 10
	defStruct  goto 11
	tipo  goto 12


state 3
	programa : listaDefiniciones VOID . MAIN '(' ')' '{' listaCampos listaSentencias '}'  (1)
	defFuncion : VOID . ID '(' param ')' '{' listaCampos listaSentencias '}'  (15)

	ID  shift 13
	MAIN  shift 14
	.  error


state 4
	tipo : INT .  (17)

	.  reduce 17


state 5
	tipo : CHAR .  (19)

	.  reduce 19


state 6
	tipo : DOUBLE .  (18)

	.  reduce 18


state 7
	defStruct : STRUCT . '{' listaDefVariables '}' ID ';'  (11)

	'{'  shift 15
	.  error


state 8
	listaDefiniciones : listaDefiniciones Definicion .  (2)

	.  reduce 2


state 9
	Definicion : defVariable .  (4)

	.  reduce 4


state 10
	Definicion : defFuncion .  (5)

	.  reduce 5


state 11
	Definicion : defStruct .  (6)

	.  reduce 6


state 12
	defVariable : tipo . listaIds ';'  (14)
	defFuncion : tipo . ID '(' param ')' '{' listaCampos listaSentencias '}'  (16)
	tipo : tipo . '[' CTE_ENTERA ']'  (20)

	ID  shift 16
	'['  shift 17
	.  error

	listaIds  goto 18


state 13
	defFuncion : VOID ID . '(' param ')' '{' listaCampos listaSentencias '}'  (15)

	'('  shift 19
	.  error


state 14
	programa : listaDefiniciones VOID MAIN . '(' ')' '{' listaCampos listaSentencias '}'  (1)

	'('  shift 20
	.  error


state 15
	defStruct : STRUCT '{' . listaDefVariables '}' ID ';'  (11)
	listaDefVariables : .  (13)

	.  reduce 13

	listaDefVariables  goto 21


state 16
	defFuncion : tipo ID . '(' param ')' '{' listaCampos listaSentencias '}'  (16)
	listaIds : ID .  (68)

	'('  shift 22
	';'  reduce 68
	','  reduce 68


state 17
	tipo : tipo '[' . CTE_ENTERA ']'  (20)

	CTE_ENTERA  shift 23
	.  error


state 18
	defVariable : tipo listaIds . ';'  (14)
	listaIds : listaIds . ',' ID  (67)

	';'  shift 24
	','  shift 25
	.  error


state 19
	defFuncion : VOID ID '(' . param ')' '{' listaCampos listaSentencias '}'  (15)
	param : .  (63)

	INT  shift 4
	CHAR  shift 5
	DOUBLE  shift 6
	')'  reduce 63

	tipo  goto 26
	param  goto 27
	parametros  goto 28
	parametro  goto 29


state 20
	programa : listaDefiniciones VOID MAIN '(' . ')' '{' listaCampos listaSentencias '}'  (1)

	')'  shift 30
	.  error


state 21
	defStruct : STRUCT '{' listaDefVariables . '}' ID ';'  (11)
	listaDefVariables : listaDefVariables . defVariable  (12)

	INT  shift 4
	CHAR  shift 5
	DOUBLE  shift 6
	'}'  shift 31
	.  error

	defVariable  goto 32
	tipo  goto 33


state 22
	defFuncion : tipo ID '(' . param ')' '{' listaCampos listaSentencias '}'  (16)
	param : .  (63)

	INT  shift 4
	CHAR  shift 5
	DOUBLE  shift 6
	')'  reduce 63

	tipo  goto 26
	param  goto 34
	parametros  goto 28
	parametro  goto 29


state 23
	tipo : tipo '[' CTE_ENTERA . ']'  (20)

	']'  shift 35
	.  error


state 24
	defVariable : tipo listaIds ';' .  (14)

	.  reduce 14


state 25
	listaIds : listaIds ',' . ID  (67)

	ID  shift 36
	.  error


state 26
	tipo : tipo . '[' CTE_ENTERA ']'  (20)
	parametro : tipo . ID  (66)

	ID  shift 37
	'['  shift 17
	.  error


state 27
	defFuncion : VOID ID '(' param . ')' '{' listaCampos listaSentencias '}'  (15)

	')'  shift 38
	.  error


state 28
	param : parametros .  (62)
	parametros : parametros . ',' parametro  (64)

	','  shift 39
	')'  reduce 62


state 29
	parametros : parametro .  (65)

	.  reduce 65


state 30
	programa : listaDefiniciones VOID MAIN '(' ')' . '{' listaCampos listaSentencias '}'  (1)

	'{'  shift 40
	.  error


state 31
	defStruct : STRUCT '{' listaDefVariables '}' . ID ';'  (11)

	ID  shift 41
	.  error


state 32
	listaDefVariables : listaDefVariables defVariable .  (12)

	.  reduce 12


state 33
	defVariable : tipo . listaIds ';'  (14)
	tipo : tipo . '[' CTE_ENTERA ']'  (20)

	ID  shift 42
	'['  shift 17
	.  error

	listaIds  goto 18


state 34
	defFuncion : tipo ID '(' param . ')' '{' listaCampos listaSentencias '}'  (16)

	')'  shift 43
	.  error


state 35
	tipo : tipo '[' CTE_ENTERA ']' .  (20)

	.  reduce 20


state 36
	listaIds : listaIds ',' ID .  (67)

	.  reduce 67


state 37
	parametro : tipo ID .  (66)

	.  reduce 66


state 38
	defFuncion : VOID ID '(' param ')' . '{' listaCampos listaSentencias '}'  (15)

	'{'  shift 44
	.  error


state 39
	parametros : parametros ',' . parametro  (64)

	INT  shift 4
	CHAR  shift 5
	DOUBLE  shift 6
	.  error

	tipo  goto 26
	parametro  goto 45


state 40
	programa : listaDefiniciones VOID MAIN '(' ')' '{' . listaCampos listaSentencias '}'  (1)
	listaCampos : .  (8)

	.  reduce 8

	listaCampos  goto 46


state 41
	defStruct : STRUCT '{' listaDefVariables '}' ID . ';'  (11)

	';'  shift 47
	.  error


state 42
	listaIds : ID .  (68)

	.  reduce 68


state 43
	defFuncion : tipo ID '(' param ')' . '{' listaCampos listaSentencias '}'  (16)

	'{'  shift 48
	.  error


state 44
	defFuncion : VOID ID '(' param ')' '{' . listaCampos listaSentencias '}'  (15)
	listaCampos : .  (8)

	.  reduce 8

	listaCampos  goto 49


state 45
	parametros : parametros ',' parametro .  (64)

	.  reduce 64


state 46
	programa : listaDefiniciones VOID MAIN '(' ')' '{' listaCampos . listaSentencias '}'  (1)
	listaCampos : listaCampos . campos  (7)
	listaSentencias : .  (51)

	INT  shift 4
	CHAR  shift 5
	DOUBLE  shift 6
	STRUCT  shift 7
	CTE_ENTERA  reduce 51
	CTE_REAL  reduce 51
	CTE_CARACTER  reduce 51
	ID  reduce 51
	WHILE  reduce 51
	IF  reduce 51
	READ  reduce 51
	WRITE  reduce 51
	RETURN  reduce 51
	'!'  reduce 51
	'-'  reduce 51
	'('  reduce 51
	'}'  reduce 51

	listaSentencias  goto 50
	defVariable  goto 51
	defStruct  goto 52
	campos  goto 53
	tipo  goto 33


state 47
	defStruct : STRUCT '{' listaDefVariables '}' ID ';' .  (11)

	.  reduce 11


state 48
	defFuncion : tipo ID '(' param ')' '{' . listaCampos listaSentencias '}'  (16)
	listaCampos : .  (8)

	.  reduce 8

	listaCampos  goto 54


state 49
	listaCampos : listaCampos . campos  (7)
	defFuncion : VOID ID '(' param ')' '{' listaCampos . listaSentencias '}'  (15)
	listaSentencias : .  (51)

	INT  shift 4
	CHAR  shift 5
	DOUBLE  shift 6
	STRUCT  shift 7
	CTE_ENTERA  reduce 51
	CTE_REAL  reduce 51
	CTE_CARACTER  reduce 51
	ID  reduce 51
	WHILE  reduce 51
	IF  reduce 51
	READ  reduce 51
	WRITE  reduce 51
	RETURN  reduce 51
	'!'  reduce 51
	'-'  reduce 51
	'('  reduce 51
	'}'  reduce 51

	listaSentencias  goto 55
	defVariable  goto 51
	defStruct  goto 52
	campos  goto 53
	tipo  goto 33


state 50
	programa : listaDefiniciones VOID MAIN '(' ')' '{' listaCampos listaSentencias . '}'  (1)
	listaSentencias : listaSentencias . sentencia  (50)

	CTE_ENTERA  shift 56
	CTE_REAL  shift 57
	CTE_CARACTER  shift 58
	ID  shift 59
	WHILE  shift 60
	IF  shift 61
	READ  shift 62
	WRITE  shift 63
	RETURN  shift 64
	'!'  shift 65
	'-'  shift 66
	'('  shift 67
	'}'  shift 68
	.  error

	expresion  goto 69
	operacion  goto 70
	sentencia  goto 71


state 51
	campos : defVariable .  (9)

	.  reduce 9


state 52
	campos : defStruct .  (10)

	.  reduce 10


state 53
	listaCampos : listaCampos campos .  (7)

	.  reduce 7


state 54
	listaCampos : listaCampos . campos  (7)
	defFuncion : tipo ID '(' param ')' '{' listaCampos . listaSentencias '}'  (16)
	listaSentencias : .  (51)

	INT  shift 4
	CHAR  shift 5
	DOUBLE  shift 6
	STRUCT  shift 7
	CTE_ENTERA  reduce 51
	CTE_REAL  reduce 51
	CTE_CARACTER  reduce 51
	ID  reduce 51
	WHILE  reduce 51
	IF  reduce 51
	READ  reduce 51
	WRITE  reduce 51
	RETURN  reduce 51
	'!'  reduce 51
	'-'  reduce 51
	'('  reduce 51
	'}'  reduce 51

	listaSentencias  goto 72
	defVariable  goto 51
	defStruct  goto 52
	campos  goto 53
	tipo  goto 33


state 55
	defFuncion : VOID ID '(' param ')' '{' listaCampos listaSentencias . '}'  (15)
	listaSentencias : listaSentencias . sentencia  (50)

	CTE_ENTERA  shift 56
	CTE_REAL  shift 57
	CTE_CARACTER  shift 58
	ID  shift 59
	WHILE  shift 60
	IF  shift 61
	READ  shift 62
	WRITE  shift 63
	RETURN  shift 64
	'!'  shift 65
	'-'  shift 66
	'('  shift 67
	'}'  shift 73
	.  error

	expresion  goto 69
	operacion  goto 70
	sentencia  goto 71


state 56
	expresion : CTE_ENTERA .  (24)

	.  reduce 24


state 57
	expresion : CTE_REAL .  (26)

	.  reduce 26


state 58
	expresion : CTE_CARACTER .  (25)

	.  reduce 25


state 59
	expresion : ID .  (27)
	expresion : ID . '(' argumentos ')'  (31)
	sentencia : ID . '(' argumentos ')' ';'  (59)

	'('  shift 74
	AND  reduce 27
	DISTINTO  reduce 27
	MAYORIGUAL  reduce 27
	MENORIGUAL  reduce 27
	OR  reduce 27
	IGUAL  reduce 27
	'='  reduce 27
	'>'  reduce 27
	'<'  reduce 27
	'+'  reduce 27
	'-'  reduce 27
	'*'  reduce 27
	'/'  reduce 27
	'%'  reduce 27
	'['  reduce 27
	'.'  reduce 27


state 60
	sentencia : WHILE . '(' expresion ')' cuerpo  (54)

	'('  shift 75
	.  error


state 61
	sentencia : IF . '(' expresion ')' cuerpo  (55)
	sentencia : IF . '(' expresion ')' cuerpo ELSE cuerpo  (56)

	'('  shift 76
	.  error


state 62
	sentencia : READ . listaExpresiones ';'  (53)

	CTE_ENTERA  shift 56
	CTE_REAL  shift 57
	CTE_CARACTER  shift 58
	ID  shift 77
	'!'  shift 65
	'-'  shift 66
	'('  shift 67
	.  error

	listaExpresiones  goto 78
	expresion  goto 79
	operacion  goto 70


state 63
	sentencia : WRITE . listaExpresiones ';'  (52)

	CTE_ENTERA  shift 56
	CTE_REAL  shift 57
	CTE_CARACTER  shift 58
	ID  shift 77
	'!'  shift 65
	'-'  shift 66
	'('  shift 67
	.  error

	listaExpresiones  goto 80
	expresion  goto 79
	operacion  goto 70


state 64
	sentencia : RETURN . expresion ';'  (57)

	CTE_ENTERA  shift 56
	CTE_REAL  shift 57
	CTE_CARACTER  shift 58
	ID  shift 77
	'!'  shift 65
	'-'  shift 66
	'('  shift 67
	.  error

	expresion  goto 81
	operacion  goto 70


state 65
	operacion : '!' . expresion  (46)

	CTE_ENTERA  shift 56
	CTE_REAL  shift 57
	CTE_CARACTER  shift 58
	ID  shift 77
	'!'  shift 65
	'-'  shift 66
	'('  shift 67
	.  error

	expresion  goto 82
	operacion  goto 70


state 66
	operacion : '-' . expresion  (47)

	CTE_ENTERA  shift 56
	CTE_REAL  shift 57
	CTE_CARACTER  shift 58
	ID  shift 77
	'!'  shift 65
	'-'  shift 66
	'('  shift 67
	.  error

	expresion  goto 83
	operacion  goto 70


state 67
	expresion : '(' . expresion ')'  (23)
	expresion : '(' . tipo ')' expresion  (28)

	CTE_ENTERA  shift 56
	CTE_REAL  shift 57
	CTE_CARACTER  shift 58
	ID  shift 77
	INT  shift 4
	CHAR  shift 5
	DOUBLE  shift 6
	'!'  shift 65
	'-'  shift 66
	'('  shift 67
	.  error

	tipo  goto 84
	expresion  goto 85
	operacion  goto 70


state 68
	programa : listaDefiniciones VOID MAIN '(' ')' '{' listaCampos listaSentencias '}' .  (1)

	.  reduce 1


state 69
	expresion : expresion . '[' expresion ']'  (29)
	expresion : expresion . '.' ID  (30)
	operacion : expresion . '+' expresion  (33)
	operacion : expresion . '*' expresion  (34)
	operacion : expresion . '-' expresion  (35)
	operacion : expresion . '/' expresion  (36)
	operacion : expresion . '%' expresion  (37)
	operacion : expresion . '>' expresion  (38)
	operacion : expresion . MAYORIGUAL expresion  (39)
	operacion : expresion . IGUAL expresion  (40)
	operacion : expresion . DISTINTO expresion  (41)
	operacion : expresion . '<' expresion  (42)
	operacion : expresion . MENORIGUAL expresion  (43)
	operacion : expresion . AND expresion  (44)
	operacion : expresion . OR expresion  (45)
	sentencia : expresion . '=' expresion ';'  (58)

	AND  shift 86
	DISTINTO  shift 87
	MAYORIGUAL  shift 88
	MENORIGUAL  shift 89
	OR  shift 90
	IGUAL  shift 91
	'='  shift 92
	'>'  shift 93
	'<'  shift 94
	'+'  shift 95
	'-'  shift 96
	'*'  shift 97
	'/'  shift 98
	'%'  shift 99
	'['  shift 100
	'.'  shift 101
	.  error


state 70
	expresion : operacion .  (32)

	.  reduce 32


state 71
	listaSentencias : listaSentencias sentencia .  (50)

	.  reduce 50


state 72
	defFuncion : tipo ID '(' param ')' '{' listaCampos listaSentencias . '}'  (16)
	listaSentencias : listaSentencias . sentencia  (50)

	CTE_ENTERA  shift 56
	CTE_REAL  shift 57
	CTE_CARACTER  shift 58
	ID  shift 59
	WHILE  shift 60
	IF  shift 61
	READ  shift 62
	WRITE  shift 63
	RETURN  shift 64
	'!'  shift 65
	'-'  shift 66
	'('  shift 67
	'}'  shift 102
	.  error

	expresion  goto 69
	operacion  goto 70
	sentencia  goto 71


state 73
	defFuncion : VOID ID '(' param ')' '{' listaCampos listaSentencias '}' .  (15)

	.  reduce 15


state 74
	expresion : ID '(' . argumentos ')'  (31)
	sentencia : ID '(' . argumentos ')' ';'  (59)
	argumentos : .  (48)

	CTE_ENTERA  shift 56
	CTE_REAL  shift 57
	CTE_CARACTER  shift 58
	ID  shift 77
	'!'  shift 65
	'-'  shift 66
	'('  shift 67
	')'  reduce 48

	listaExpresiones  goto 103
	expresion  goto 79
	argumentos  goto 104
	operacion  goto 70


state 75
	sentencia : WHILE '(' . expresion ')' cuerpo  (54)

	CTE_ENTERA  shift 56
	CTE_REAL  shift 57
	CTE_CARACTER  shift 58
	ID  shift 77
	'!'  shift 65
	'-'  shift 66
	'('  shift 67
	.  error

	expresion  goto 105
	operacion  goto 70


state 76
	sentencia : IF '(' . expresion ')' cuerpo  (55)
	sentencia : IF '(' . expresion ')' cuerpo ELSE cuerpo  (56)

	CTE_ENTERA  shift 56
	CTE_REAL  shift 57
	CTE_CARACTER  shift 58
	ID  shift 77
	'!'  shift 65
	'-'  shift 66
	'('  shift 67
	.  error

	expresion  goto 106
	operacion  goto 70


state 77
	expresion : ID .  (27)
	expresion : ID . '(' argumentos ')'  (31)

	'('  shift 107
	AND  reduce 27
	DISTINTO  reduce 27
	MAYORIGUAL  reduce 27
	MENORIGUAL  reduce 27
	OR  reduce 27
	IGUAL  reduce 27
	'='  reduce 27
	'>'  reduce 27
	'<'  reduce 27
	'+'  reduce 27
	'-'  reduce 27
	'*'  reduce 27
	'/'  reduce 27
	'%'  reduce 27
	'['  reduce 27
	']'  reduce 27
	')'  reduce 27
	'.'  reduce 27
	';'  reduce 27
	','  reduce 27


state 78
	listaExpresiones : listaExpresiones . ',' expresion  (22)
	sentencia : READ listaExpresiones . ';'  (53)

	';'  shift 108
	','  shift 109
	.  error


state 79
	listaExpresiones : expresion .  (21)
	expresion : expresion . '[' expresion ']'  (29)
	expresion : expresion . '.' ID  (30)
	operacion : expresion . '+' expresion  (33)
	operacion : expresion . '*' expresion  (34)
	operacion : expresion . '-' expresion  (35)
	operacion : expresion . '/' expresion  (36)
	operacion : expresion . '%' expresion  (37)
	operacion : expresion . '>' expresion  (38)
	operacion : expresion . MAYORIGUAL expresion  (39)
	operacion : expresion . IGUAL expresion  (40)
	operacion : expresion . DISTINTO expresion  (41)
	operacion : expresion . '<' expresion  (42)
	operacion : expresion . MENORIGUAL expresion  (43)
	operacion : expresion . AND expresion  (44)
	operacion : expresion . OR expresion  (45)

	AND  shift 86
	DISTINTO  shift 87
	MAYORIGUAL  shift 88
	MENORIGUAL  shift 89
	OR  shift 90
	IGUAL  shift 91
	'>'  shift 93
	'<'  shift 94
	'+'  shift 95
	'-'  shift 96
	'*'  shift 97
	'/'  shift 98
	'%'  shift 99
	'['  shift 100
	'.'  shift 101
	')'  reduce 21
	';'  reduce 21
	','  reduce 21


state 80
	listaExpresiones : listaExpresiones . ',' expresion  (22)
	sentencia : WRITE listaExpresiones . ';'  (52)

	';'  shift 110
	','  shift 109
	.  error

